# matrixCalc

./: CMakeLists.txt  Doxyfile  Makefile  README.md  prohlaseni.txt  zadani.txt
examples/: Binary operation  New matrix  Unary operation
src/: App.cpp  App.h  Help.cpp  Help.h  InputHandler.cpp  InputHandler.h  StateEnum.h  StateEnum.h.gch  main.cpp
src/calc/: Calculator.cpp  Calculator.h  Help.cpp  Help.h  InputHandler.cpp  InputHandler.h
src/command/: CalcCommand.cpp  CalcCommand.h  Command.cpp  Command.h  DeterminantCommand.cpp  DeterminantCommand.h  GaussCommand.cpp  GaussCommand.h  InvertCommand.cpp  InvertCommand.h  MergeCommand.cpp  MergeCommand.h  PrintCommand.cpp  PrintCommand.h  RankCommand.cpp  RankCommand.h  ScanCommand.cpp  ScanCommand.h  SplitCommand.cpp  SplitCommand.h  TransposeCommand.cpp  TransposeCommand.h
src/config/: CommandEnum.cpp  CommandEnum.h  StateEnum.h
src/matrix/: DenseMatrix.cpp  DenseMatrix.h  IdentityMatrix.cpp  IdentityMatrix.h  Matrix.cpp  Matrix.h  SparseMatrix.cpp  SparseMatrix.h
src/operation/: BinaryOperation.cpp  BinaryOperation.h  Gauss.cpp  Gauss.h  Invert.cpp  Invert.h  Operation.cpp  Operation.h  Split.cpp  Split.h  Transpose.cpp  Transpose.h
src/operation/binary/: Add.cpp  Add.h  Merge.cpp  Merge.h  Multiply.cpp  Multiply.h  Subtract.cpp  Subtract.h
